@@ -95,6 +95,7 @@ extern void sys_ticks_cmd (int);
 extern void sys_log_dump (int);
 extern void sys_emul_double (uint8_t);
 extern void sys_emul_float (uint8_t);
+extern void sys_misc_fxtof (uint8_t);
 
 extern dword host_fileio (byte, dword);
 #endif // HOST_H
